		using -g3 if available when --enable-debug is specified
		support for using the oracle statement cache
		fixing an oracle column-resource-related memory leak
		eliminating sqlr-start delay
		"using namespace rudiments" declaration fixes
	added a faq entry about common OCIEnvCreate errors
	removed default id warning from sqlr-cachemanager
	removed coloration from sqlrsh

0.46 - refactored the translation framework to mimic the trigger framework
	added make.batch file for building on windows
	added C# API and ADO.NET adapter
	added begin method to API's
	added sqlrelay.xsd
	added date binds
	applied Georgiy Kirichenko's missing flushWriteBuffer() patch
	fixed some subtle bugs in the Ruby DBI module that modern versions of
		Ruby DBI reveal
	fixed sql parser errors involving "not null" and union clauses
	added a translation to replace double-quoted string literals with
		single-quoted string literals
	fixed a sql parser bug where "group" of a group by clause could be
		misinterpreted as a table alias
	updated the scaler to poll 10 times per second and also accept a
		trigger from the listener to mitigate race conditions that
		can become problematic when connections="0" is used
	added C# and ADO.NET docs and updated windows documentation
	updated the documentation
	added support for waitfordowndatabase config parameter
	applied some odbc fixes from Chae Young-ku
	added explicit support for outer join operators to the sql parser
	dynamic-ized triggers and translations
	added a "matches" to "like" translation
	added a "serial" to "autoincrement" translation
	fixed debug option to query command line client
	added javac compile test to configure script
	fixed an __attribute__ problem that could occur if perl was compiled
		with gcc>2.95 but used on a system with only gcc-2.95 available
	fixed an oustanding tcl bug that caused cursors not to be created
	fixed several bugs related to escaping quotes
	refactored OS detection in configure script