@@ -20,6 +20,7 @@
 	added a faq entry about common OCIEnvCreate errors
 	removed default id warning from sqlr-cachemanager
 	removed coloration from sqlrsh
+	updated begin, commit and rollback to return errors if they fail
 
 0.46 - refactored the translation framework to mimic the trigger framework
 	added make.batch file for building on windows
